# pocketwatch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.md
pocketwatch/: __init__.py  spellbook.py
src/pocketwatch/: __init__.py  core.py  decorators.py
tests/: manual_tests.py  test_core.py  test_decorators.py
tests/manual/: manual_cprofile.py  manual_tests.py
