[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketwatch"
version = "0.1.0"
description = "Drop-in stopwatch utility"
authors = [{name = "tmarquart", email=""}]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.optional-dependencies]
notify = ["notifypy>=1.4"]

[tool.setuptools.packages.find]
where=["."]

[tool.pytest.ini_options]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F"]
line-length = 88

[tool.setuptools.package-data]
"pocketwatch.data" = ["*.wav"]