[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketwatch"
version = "0.1.2"
description = "Drop-in stopwatch utility"
readme = "README.md"
authors = [{name = "tmarquart", email="tmarquart@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["notify-py>=0.3"]


[tool.setuptools.packages.find]
where=["src"]

[tool.pytest.ini_options]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F"]
line-length = 88

[tool.setuptools.package-data]
"pocketwatch.data" = ["*.wav"]
